# mcp-snowflake-server

./: README.md  pyproject.toml
src/mcp_snowflake_server/: __init__.py  cli.py  server.py
